[package]
name = "tar_ed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tarator = { path = "../tarator" }
log = { path = "../vendor/log" }
env_logger = { path = "../vendor/env_logger" }
gtk = { version = "0.4", package = "gtk4", features = ["v4_6"] }
glium = { version = "0.31", default-features = false }
epoxy = { version = "0.1" }
libloading = { version = "0.7" }
