[package]
name = "tarator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { path = "../vendor/log" }
bitflags = "1.3"
glam = "0.20"

gl = "0.14"
winit = "0.26"
egui = { path = "../vendor/egui/egui" }
eframe = { path = "../vendor/egui/eframe" }
egui_glfw_gl = { path = "../vendor/egui_glfw_gl" }

glium = { version = "0.31", default-features = false }
epoxy = { version = "0.1" }
libloading = { version = "0.7" }

[dependencies.glfw]
path = "../vendor/glfw"
default-features = true
