[package]
name = "test1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.26"
cgmath = "0.18"
log = { path = "../../vendor/log" }
env_logger = { path = "../../vendor/env_logger" }
wgpu = "0.12"
pollster = "0.2"
image = "*"
bytemuck = { version = "1.4", features = [ "derive" ] }

tarator = { path = "../../tarator"}